# bulletproofs

./: .gitignore  Cargo.toml
src/: errors.rs  generators.rs  inner_product_proof.rs  lib.rs  transcript.rs  util.rs
src/r1cs/: linear_combination.rs  proof.rs  prover.rs  verifier.rs
src/range_proof/: dealer.rs  messages.rs  mod.rs  party.rs
tests/: r1cs.rs  range_proof.rs
