[package]
name = "tari_bulletproofs"
# Before doing a release:
# - update version field
# - update html_root_url
# - update CHANGELOG
version = "4.4.0"
authors = ["Cathie Yun <cathieyun@gmail.com>",
           "Henry de Valence <hdevalence@hdevalence.ca>",
           "Oleg Andreev <oleganza@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/tari-project/bulletproofs"
categories = ["cryptography"]
keywords = ["cryptography", "crypto", "ristretto", "zero-knowledge", "bulletproofs"]
description = "A pure-Rust implementation of Bulletproofs using Ristretto"
edition = "2018"

[dependencies]
curve25519-dalek = {git = "https://github.com/swvheerden/curve25519-dalek", rev = "c8120bbb67c0c93da45710edae36db98e8036cbf", default-features = false, features = ["alloc", "zeroize", "rand_core","precomputed-tables","digest"] }
subtle = { package = "subtle", version = "2.4.1", default-features = false }
sha3 = { version = "0.10.6", default-features = false }
blake2  = { version = "0.10.6", default-features = false }
digest = { version = "0.10.0", default-features = false }
rand_core = { version = "0.6", default-features = false, features = ["alloc"] }
rand = { version = "0.8", default-features = false, optional = true, features = ["std_rng"] }
byteorder = { version = "1", default-features = false }
serde = { version = "1", default-features = false, features = ["alloc"], optional = true}
serde_derive = { version = "1", default-features = false }
thiserror = { version = "1", optional = true }
merlin = { version = "3", default-features = false }
zeroize = { version = "1", default-features = false }
snafu = {version="0.7.4", default-features =false}

[dev-dependencies]
hex = "0.3"
criterion = "0.3"
bincode = "1"
rand_chacha = "0.3"

[features]
default = ["std", "yoloproofs", "serialize"]
yoloproofs = []
alloc = ["curve25519-dalek/alloc"]
std = ["rand", "rand/std", "rand/std_rng", "thiserror"]
nightly = [ "curve25519-dalek/alloc", "subtle/nightly"]
docs = ["nightly"]
serialize = ["serde", "curve25519-dalek/serde"]



[[test]]
name = "range_proof"

[[test]]
name = "r1cs"
required-features = ["yoloproofs"]

[[bench]]
name = "range_proof"
harness = false
required-features = ["avx2_backend"]

[[bench]]
name = "generators"
harness = false

[[bench]]
name = "r1cs"
harness = false
required-features = ["yoloproofs", "avx2_backend"]
